# camplight-task

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml
app/database/: connection_context.py  initialize.py  tables.py
app/models/: pagination_parameters.py  user.py
app/repositories/: user_repository.py
app/routers/: health.py  users.py
app/services/: profile_photo.py
ui/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
ui/src/: config.js  index.js  routes.js
ui/src/components/: AddEditUserModal.js  Drawer.js  Masonry.js  Navbar.js  Page.js  Pagination.js  Post.js  ThemeSwitch.js  Typography.js  UserCard.js  UsersList.js
ui/src/pages/: About.js  Home.js
ui/src/services/: Health.js  Users.js
ui/src/styles/: Masonry.css  index.css
